--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,72 @@
-Hello World
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div id="header-container">
+    <header>
+        <h1>Yiqun LIU</h1>
+    </header>
+
+    <!-- Navigation Menu -->
+    <nav>
+        <a href="">me</a>
+        <a href="other-page.html">research</a>
+        <a href="">my-bookmarks</a>
+    </nav>
+    </div>
+
+        <!-- About Me Section -->
+        <div class="container">
+            <section id="about" class="section">
+                <div class="left-side">
+                    <img src="images/me.jpg" alt="Yiqun the photo">
+                </div>
+                <div class="right-side ">
+                  <div class="grid grid-cols-8 gap-4">
+                    <div class="min-w-24 bold">
+                      Address
+                    </div>
+                    <div class="col-span-7"> 
+                      Université Grenoble Alpes, Institut Fourier, CS 40700, 38058 Grenoble Cedex 9, France
+                    </div>
+                    <div class="min-w-24 bold">
+                      Office
+                    </div>
+                    <div class="col-span-7"> 
+                      307
+                    </div>
+                    <div class="min-w-24 bold">
+                      Email
+                    </div>
+                    <div class="col-span-7"> 
+                      yiqun.liu@univ-grenoble-alpes.fr
+                    </div>
+                  </div>
+
+                  <div class="py-3">
+                    <p>
+                       Woulouwlou
+                    </p>
+
+                    <p>
+                        A short CV is <a href="https://drive.google.com/file/d/1J76geYlrSmkoJ1cYjmIcHwkBtFIpzV9s/view?usp=drive_link">here</a>.
+                    </p>
+                  </div>
+
+                </div>
+            </section>
+        </div>
+
+        <div id="footer-container">
+          <footer>
+            find me on: <a href="https://github.com/yiqunLIU0">GitHub</a>
+          </footer>
+        </div>
+
+    </body>
+</html>
