--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
 
                   <div class="py-3">
                     <p>
-                       Woulouwlou
+                       Currently, I am doing my thesis at Institut Fourier, under the supervision of <a href="https://www-fourier.ujf-grenoble.fr/~bonnetie/">Eric Bonnetier</a> and <a href="https://lacave.perso.math.cnrs.fr/index-en.html">Christophe Lacave</a>.
                     </p>
 
                     <p>
