--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
                     </p>
 
                     <p>
-                        A short CV is <a href="https://drive.google.com/file/d/1J76geYlrSmkoJ1cYjmIcHwkBtFIpzV9s/view?usp=drive_link">here</a>.
+                        A short CV is.
                     </p>
                   </div>
 
